changes in index file

--- a/index.html
+++ b/index.html
@@ -9,46 +9,33 @@
     </head>
     <body>
         <h2>Navbar Project</h2>
-        <nav>
-        <div class="nav-center">
+           <nav>
+               <div class="nav-center">
             <!-- nav header-->
-          <div class="nav-hearder">
-            <button class="nav-toggle">
+                <div class="nav-hearder">
+                <button class="nav-toggle">
                 <i class="fa-solid fa-bars"></i>
-            </button>
-          </div> 
+                 </button>
+                 </div> 
        
         <!--links-->
         <ul class="links">
-         <li>
-            <a href="index.html">Home</a>
+         <li><a href="index.html">Home</a>
          </li>
-         <li>
-            <a href="#">About</a>
+         <li><a href="#">About</a>
          </li>
-         <li>
-            <a href="#">Projects</a>
+         <li><a href="#">Projects</a>
          </li>
-         <li>
-            <a href="#">Contact</a>
+         <li><a href="#">Contact</a>
          </li>
         </ul>
         <!-- social media-->
         <ul class="social-icons">
-         <li>
-            <a href="https://www.facebook.com/jasmeen.anjum">
-                <i class="fa-brands fa-facebook"></i>
-            </a>
+         <li><a href="https://www.facebook.com/jasmeen.anjum"><i class="fa-brands fa-facebook"></i></a>
          </li>&nbsp;
-         <li>
-            <a href="www.linkedin.com/in/jasmeen-ahsan-32402059">
-                <i class="fa-brands fa-linkedin"></i>
-            </a>
+         <li><a href="www.linkedin.com/in/jasmeen-ahsan-32402059"><i class="fa-brands fa-linkedin"></i></a>
          </li>&nbsp;
-         <li>
-            <a href="https://github.com/jasmeen14">
-                <i class="fa-brands fa-github"></i>
-                </a>
+         <li><a href="https://github.com/jasmeen14"><i class="fa-brands fa-github"></i></a>
          </li>
         </ul>
     </div>
